# Curso-django

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
apps/base/: models.py
apps/products/: admin.py  models.py
apps/products/api/: routers.py  urls.py
apps/products/api/serializers/: general_serializers.py  product_serializer.py
apps/products/api/views/: general_views.py  general_viewset.py  product_viewset.py  products_views.py
apps/products/migrations/: 0001_initial.py  0002_remove_categoryproduct_meeasure_unit_and_more.py
apps/users/: authentication.py  authentication_mixins.py  models.py  views.py
apps/users/api/: api.py  old_api.py  routers.py  serializer.py  urls.py
apps/users/migrations/: 0001_initial.py
backend/: .gitignore  backend.code-workspace  requirements.txt
backend/apps/base/: api.py  models.py
backend/apps/products/: admin.py  models.py
backend/apps/products/api/: routers.py  urls.py
backend/apps/products/migrations/: 0001_initial.py  0002_remove_categoryproduct_meeasure_unit_and_more.py
backend/apps/users/: authentication.py  authentication_mixins.py  models.py  views.py
backend/apps/users/api/: api.py  old_api.py  routers.py  serializer.py  (+1 more)
backend/backend/: settings.py  urls.py
backend/backend/settings/: base.py  local.py  production.py
config/: urls.py
config/settings/: base.py  development.py  production.py
frontend/: .gitignore  frontend.code-workspace  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/server/: middleware-build-manifest.js  webpack-runtime.js
(+27 files in other folders)
